--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 <mat-toolbar>
     <a href="javascript:void(0)" routerLink="/" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon style="color: white;">book</mat-icon>
+    <mat-icon style="color: white;">home</mat-icon>
     </a>
     <span style="color: white;">Kodwa</span>
     <span class="example-spacer"></span>
