--- a/src/app/pages/user/start/start.component.css
+++ b/src/app/pages/user/start/start.component.css
@@ -5,3 +5,13 @@
     border-radius: 25px;
 
 }
+.example-radio-group {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+    align-items: flex-start;
+  }
+  
+  .example-radio-button {
+    margin: 5px;
+  }
