--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -3,11 +3,82 @@
         <div class="row">
 
 
-        <div class="col-md-2">
-            <h3>Instructions</h3>
+        <div class="col-md-3">
+            <mat-card style="margin-top: 50px;">
+                <mat-card-content>
+                    <h3><b>Evalution Student</b></h3>
+                   <!-- <ul>
+                        <li>Do not refresh the page otherwise you will get new question in this quiz</li>
+                        <li>Don't switch the tabs</li>
+                        <li>Don't minimize the window</li>
+        
+        
+                    </ul>-->
+                    <mat-vertical-stepper #stepper>
+                         
+
+                        <mat-step label=" Step 1">
+                            <b>How much does he concentrate ?</b>
+                            <br>
+                            <mat-radio-group class="example-radio-group" [(ngModel)]="step1Answer">
+                                <mat-radio-button class="example-radio-button"   *ngFor="let n of note" [value]="n"  >
+                                    {{n}} <br>
+                                  </mat-radio-button> <br>
+
+
+
+                            </mat-radio-group>
+                            
+                            <div>
+                                <button mat-raised-button color="primary" matStepperNext> <span>Next</span></button>
+                              </div>>
+                            
+                            
+                        </mat-step>
+                        <mat-step label="Step 2">
+                            <b>How much does he concentrate ?</b>
+                            <br>
+                            <mat-radio-group class="example-radio-group" [(ngModel)]="step2Answer">
+                                <mat-radio-button class="example-radio-button"   *ngFor="let n of note" [value]="n">
+                                    {{n}}
+                                  </mat-radio-button>
+                                  <div>
+                                    <button mat-raised-button color="primary" matStepperPrevious>Back</button>
+                                    <button mat-button matStepperNext>Next</button>
+                                  </div>
+</mat-radio-group>
+                        </mat-step>
+                        <mat-step label="Step 3">
+                            <b>How much does he concentrate ?</b>
+                            <br>
+                            <mat-radio-group class="example-radio-group" [(ngModel)]="step3Answer">
+                                <mat-radio-button class="example-radio-button"   *ngFor="let n of note" [value]="n">
+                                    {{n}}
+                                  </mat-radio-button>
+                                  
+                                  <div>
+                                    <button mat-raised-button color="primary" matStepperPrevious>Back</button>
+                                    <button mat-button matStepperNext>Next</button>
+                                  </div>
+</mat-radio-group>
+                        </mat-step>
+
+                        <mat-step mat-raised-button color="primary" label="Done">
+                            <button mat-button (click)="stepper.reset()">Reset</button>
+
+                            <button mat-raised-button color="primary">Submit</button>
+
+                        </mat-step>
+                        
+
+                    </mat-vertical-stepper>
+
+                </mat-card-content>
+            </mat-card>
+            
 
         </div>
-        <div class="col-md-8">
+        <div class="col-md-7">
             <ng-container *ngIf="questions" >
                 <h1 class="mt20">{{ questions[0].quiz.title }}</h1>
 
@@ -21,29 +92,26 @@
                     <mat-divider></mat-divider>
                     <br>
                     <div class="row mt20" >
-                        <div class="col-md-6"> 
-                           <!--  <mat-radio-group [(ngModel)]="choix">
-                                <mat-radio-button [value]="q.option1">{{q.option1}}</mat-radio-button>
-                                <mat-radio-button  [value]="q.option2">{{q.option2}}</mat-radio-button>
-                                <mat-radio-button [value]="q.option3">{{q.option3}}</mat-radio-button>
-                                <mat-radio-button  [value]="q.option4">{{q.option4}}</mat-radio-button>
-                              </mat-radio-group>
-                              <div>Your answer est : {{choix}}</div>-->
-
-                              <mat-radio-button [(ngModel)]="q.givenAnswer" name="{{i+1}}" [value]="q.option1" >{{q.option1}}</mat-radio-button>
-                              <div class="col-md-6">
-                            <input type="radio"   [value]="q.option2"  [(ngModel)]="q.givenAnswer" name="{{i+1}}"/> {{q.option2}}
-                        </div>
+                        
+                             
+                             <div class="col-md-6">
+                              <input
+                               type="radio" [value]="q.option1"  [name]="i.toString()"   [(ngModel)]="q.givenAnswer"  /> {{q.option1}}
+                            </div> 
+                            <div class="col-md-6"> 
+                            <input type="radio"   [value]="q.option2"  [name]="i.toString()" [(ngModel)]="q.givenAnswer" /> {{q.option2}}
+                        
                     </div>
-                    <div class="row mt20">
+                    
                         <div class="col-md-6">
-                            <input type="radio"   [(ngModel)]="q.givenAnswer" [value]="q.option3" name="{{i+1}}" /> {{q.option3}}
+                            <input style="margin-top: 20px;" type="radio"   [(ngModel)]="q.givenAnswer"  [name]="i.toString()" [value]="q.option3"  /> {{q.option3}}
                         </div>
-                        <div class="col-md-6">
-                            <input type="radio"   [value]="q.option4"  [(ngModel)]="q.givenAnswer" name="{{i+1}}"/> {{q.option4}}-->
+  n                      <div class="col-md-6">
+                            <input type="radio" style="margin-top: 20px;"  [value]="q.option4"  [name]="i.toString()"  [(ngModel)]="q.givenAnswer" /> {{q.option4}}
                         </div>
                         </div>
-                    </div>
+                    
+                    
                 </mat-card-content>
 
             </mat-card>
