--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -5,38 +5,37 @@
         <div class="container">
             <div class="container text-center">
                 <img class="profile-image" src="../../../assets/default-profile.jpg"  alt="">
-                <h3>{{user?.firstName +  " "+ user?.lastName}}</h3>
+                <h3>{{user.userFirstName +  " "+ user.userLastName}}</h3>
             </div>
             <div class="row">
                 <div class="col-md-10 offset-md-1">
                 <table class="tabel">
                     <tr>
                         <td>First name:</td>
-                        <td>{{user?.firstName}}</td>
-                    </tr>
+                        <td>feres</td>
                     <tr>
                         <td>Last Name</td>
-                        <td>{{user?.lastName}}</td>
+                        <td>{{user.userLastName}}</td>
                     </tr>
                     <tr>
                         <td>UserName</td>
-                        <td>{{user?.username}}</td>
+                        <td>{{user.userName}}</td>
                     </tr>
                     <tr>
                         <td>Email</td>
-                        <td>{{user?.email}}</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Roles</td>
-                        <td>{{user?.authorities[0].authority}}</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Phone</td>
-                        <td>{{user?.phone}}</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>Status</td>
-                        <td>{{user?.enabled}}</td>
+                        <td></td>
                     </tr>
                 </table>        
                 </div>
