--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -13,7 +13,7 @@
                         <mat-form-field appearance="outline" class="full-width">
                             <mat-label>Username</mat-label>
                             <input required
-                            [(ngModel)]="loginData.username"
+                            [(ngModel)]="loginData.userName"
                             name="username"
                             matInput placeholder="Enter here ...">
                             <mat-hint>mr.username</mat-hint>
@@ -22,10 +22,10 @@
                         <mat-form-field appearance="outline" class="full-width">
                             <mat-label>Password</mat-label>
                             <input required
-                            [(ngModel)]="loginData.password"
+                            [(ngModel)]="loginData.userPassword"
                             name="password"
                             type="password" matInput placeholder="Enter here ...">
-                            <mat-hint>#Pssword01;ç</mat-hint>
+                            <mat-hint>#Password</mat-hint>
                         </mat-form-field>
     
                         <div class="container text-center">
