--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -7,6 +7,7 @@
         <br>
         <button style="color: white;" mat-list-item routerLink="/admin-dashboard/" ><mat-icon mat-list-icon style="color: white;">home</mat-icon>Home</button>
         <button style="color: white;" mat-list-item routerLink="/admin-dashboard/profile"><mat-icon mat-list-icon style="color: white;">account_circle</mat-icon> Account</button>
+        <button style="color: white;"><mat-icon mat-list-icon style="color: white;">account_circle</mat-icon> Session</button>
 
         <button style="color: white;" mat-list-item routerLink="/admin-dashboard/categories"><mat-icon mat-list-icon style="color: white;">checklist</mat-icon> Categories</button>
         <button style="color: white;" mat-list-item routerLink="/admin-dashboard/add-category"><mat-icon mat-list-icon style="color: white;">add_circle_outline</mat-icon> add Categories</button>
